style.css
/* global */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    /* primary colors */
    --red: hsl(0, 100%, 74%);
    --green: hsl(154, 59%, 51%);
    
    /* accent colors */
    --blue: hsl(248, 32%, 49%);

    /* neutral colors */
    --dark-blue: hsl(249, 10%, 26%);
    --grayish-blue: hsl(246, 25%, 77%);

    font-size: 16px;
}

body {
    font-family: 'Poppins', sans-serif;
    background-color: var(--red);
    background-image: url(./images/bg-intro-desktop.png);
    background-size: 100%;
    background-repeat: no-repeat;
    color:hsl(0, 100%, 100%);
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 25px;
}

p {
    opacity: 0.8;
}

/* main */
main {
    width: 80%;
    max-width: 1240px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* hero */

.hero {
    width: 47%;
}

h1 {
    font-size: 3rem;
    margin-bottom: 20px;
    line-height: 3.5rem;
}

p {
    font-weight: 400;
    line-height: 1.5rem;
}


/* input */

.input {
    width: 49%;
    text-align: center;
}

.form-header,
form,
input {
    border-radius: 8px;
}

.form-header,
form{
    box-shadow: 0 8px hsl(249, 10%, 26%, 0.2);
}

.form-header {
    background-color: var(--blue);
    text-align: center;
    padding: 18px;
    margin-bottom: 25px;
}

h2 {
    font-size: 1rem;
    font-weight: 400;
}

h2 span {
    font-weight: 700;
}

form {
    background-color: #fff;
    padding: 40px;
}

label {
    position: relative;
    display: block;
    margin-top: 20px;
}

input,
button {
    display: block;
    width: 100%;
    height: 55px;
    outline: none;
    border-radius: 5px;
}

input {
    font-weight: 800;
    font-size: 0.95rem;
    border: 1px solid hsl(0, 0%, 85%);
    padding: 0 30px;
    color: var(--dark-blue);
}

input:first-child {
    margin-top: 0;
}

input:focus {
    border: 1px solid var(--dark-blue);
}

/* input validation */
.error__msg {
    display: none;
    color: var(--red);
    text-align: right;
    margin-top: 10px;
    font-style: italic;
}

.error > .error__msg {
    display: block;
}

.error__icon {
    display: none;
    position: absolute;
    top: calc(55px / 2);
    right: 25px;
    transform: translateY(-50%);
}

.error > .error__icon {
    display: block;
}

.error > input {
    border-color: var(--red);
    color: var(--red);
}

.error > input::placeholder {
    visibility: hidden;
}

/* cta */
button {
    padding: 0;
    color: hsl(0, 100%, 100%);
    background-color: var(--green);
    border: none;
    box-shadow: 0 5px hsl(154, 59%, 45%);
    margin: 25px 0 20px;
    text-transform: uppercase;
    font-size: 0.85rem;
    font-weight: 600;
    letter-spacing: 1px;
}

button:hover {
    background-color: hsl(154, 59%, 61%);
    cursor: pointer;
}

small {
   color: var(--grayish-blue); 
   font-weight: 600;
   font-size: 0.68rem;
}

small > span {
    color: var(--red);
}

/* mobile version */
@media only screen and (max-width: 850px) {
    /* global */
    body {
        padding: 90px 25px 60px;
        text-align: center;
        background-image: url(./images/bg-intro-mobile.png);
        background-size: 100%;
    }

    main {
        flex-direction: column;
        max-width: 525px;
        width: 100%;
    }

    p {
        line-height: 1.5rem;
    }

    /* hero */
    .hero,
    .input {
        width: 100%;
    }

    .hero {
        margin-bottom: 60px;
    }

    h1 {
        font-size: 1.75rem;
        line-height: 2.5rem;
    }

    /* input */
    .form-header {
        padding: 18px 50px;
    }

    form {
        padding: 25px;
    }

    input,
    button {
        margin: 15px 0;
    }

    input {
        font-size: 0.85rem;
        padding-left: 20px;
    }
}

